# webharness

./: .gitignore  README.md  SQLCIPHER_COMMUNITY_EDITION_LICENSE  brothahow  brothawhen.md  brothawhy.md  brotherwhat.md  bruh.md  demoday.txt  gitignore  package-lock.json  package.json  startup.bat
backend/: Cargo.toml  gitignore  readme.md
backend/db/: harnessDB.db
backend/src/: db.rs  execution.rs  main.rs  main_old.rs  models.rs  redirects.rs  routes.rs  user_management.rs  utils.rs
devops_backend/: app.js  package-lock.json
devops_backend/devops/: push.ps1
front_end/: package-lock.json
frontend/: .gitignore  README.md  harnessDB.db  main.js  package-lock.json  package.json
frontend/components/: Navbar.css
frontend/pages/: Application.js  Homepage.js  RoleManagement.js
frontend/public/: index.html
frontend/scripts/: copy-backend-dev.js  copy-backend.js
frontend/src/: App.css  App.js  Application.css  CheckSession.js  HomePage.css  ProtectedRoute.js  RegisterUser.css  RoleManagement.css  index.css  index.js  reactSelectStyles.js  theme.js
frontend/src/components/: Navbar.css  Navbar.js  PageHeader.js  ProfileOverview.js  ProtectedRoute.js  Topbar.js
frontend/src/context/: themecontext.js
frontend/src/pages/: AddApplication.css  AddApplication.js  Application.js  EditApplication.js  Home.js  HomePage.js  Layout.js  Profile.js  (+6 more)
rocket_project/: Cargo.toml
rocket_project/db/: harnessDB.db
rocket_project/serde_derive/: Cargo.toml
rocket_project/serde_json/: Cargo.toml
rocket_project/src/: main.rs
rocket_project/static/: index.html
(+4 files in other folders)
