[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features=["json"]}
serde = {version = "1.0.214", features=["derive"]}
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
utoipa = "5.2.0"
utoipa-gen = "5.2.0"
utoipa-swagger-ui = {version = "8.0.3", features=["rocket"]}
bcrypt = "0.15.1"
uuid = {version = "1.11.0", features = ["v4"]}
winapi = { version = "0.3", features = ["processthreadsapi", "winnt"] }
chrono = { version = "0.4.38", features = ["serde"]}


