[package]
name = "rocket_project"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1", features=["json"]}
serde = {version = "1.0.214", features=["derive"]}
serde_json = "1.0"
rusqlite = { version = "0.32.0", features = ["bundled"] }
utoipa = "5.2.0"
utoipa-gen = "5.2.0"
utoipa-swagger-ui = {version = "8.0.3", features=["rocket"]}
bcrypt = "0.15.1"
